# linalg-py

./: .gitignore  README.md  build_lib.py  pyproject.toml
examples/: demo.py
linalgpy/: __init__.py  _cdefs.py  _loader.py  matrix.py
tests/: test_matrix.py
