[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linalgpy"
version = "0.1.0"
description = "Python bindings for the linalg C library (via ctypes)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7"]
demo = ["matplotlib>=3.7"]

[tool.setuptools]
packages = ["linalgpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
